# strtocraft

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  dictionary.cpp  find_combinations  find_combinations.cpp  find_combinations.txt  main  main.cpp
find_combinations.dSYM/Contents/: Info.plist
find_combinations.dSYM/Contents/Resources/DWARF/: find_combinations
include/: find_combinations.h
main.dSYM/Contents/Resources/DWARF/: main
src/: dictionary.cpp  find_combinations.cpp
